--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@gluestack-style/react": "^1.0.48",
     "@gluestack-ui/config": "^1.1.16",
     "@gluestack-ui/themed": "^1.1.11",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.1",
