--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "NativDasar",
+    "name": "trivaGames",
     "scheme": "NativDasar",
-    "slug": "NativDasar",
+    "slug": "trivaGames",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -12,9 +12,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
