--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "expo-linear-gradient": "^12.7.2",
     "expo-secure-store": "^12.8.1",
     "expo-status-bar": "^1.11.1",
+    "midtrans-client": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.73.4",
@@ -32,9 +33,11 @@
     "react-native-svg": "^13.4.0",
     "react-native-toast": "^1.0.1",
     "react-native-web": "^0.19.6",
+    "react-native-webview": "13.6.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "expo-web-browser": "~12.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
